--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Djoglo Djawi Wangon Rumah Makan</title>
-    <meta name="description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
-    <meta name="keywords" content="Djoglo Djawi Wangon, rumah makan Jawa Wangon, restoran tradisional Banyumas, venue wedding Banyumas, reservasi rumah makan">
+    <meta name="description"
+        content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
+    <meta name="keywords"
+        content="Djoglo Djawi Wangon, rumah makan Jawa Wangon, restoran tradisional Banyumas, venue wedding Banyumas, reservasi rumah makan">
     <meta name="author" content="Djoglo Djawi Wangon">
     <meta name="publisher" content="Djoglo Djawi Wangon">
     <meta name="robots" content="index, follow">
@@ -25,7 +28,8 @@
     <meta property="og:locale" content="id_ID">
     <meta property="og:type" content="restaurant">
     <meta property="og:title" content="Djoglo Djawi Wangon Rumah Makan">
-    <meta property="og:description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
+    <meta property="og:description"
+        content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
     <meta property="og:url" content="https://djoglodjawiwangon.my.id/">
     <meta property="og:site_name" content="Djoglo Djawi Wangon Rumah Makan">
     <meta property="og:image" content="https://djoglodjawiwangon.my.id/assets/LOGO%20DDW%20WHITE.png">
@@ -33,7 +37,8 @@
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Djoglo Djawi Wangon Rumah Makan">
-    <meta name="twitter:description" content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
+    <meta name="twitter:description"
+        content="Djoglo Djawi Wangon adalah rumah makan bergaya joglo di Wangon, Banyumas dengan pemandangan sawah, menu khas Jawa, serta layanan reservasi untuk wedding dan acara lainya.">
     <meta name="twitter:url" content="https://djoglodjawiwangon.my.id/">
     <meta name="twitter:image" content="https://djoglodjawiwangon.my.id/assets/LOGO%20DDW%20WHITE.png">
     <meta name="twitter:image:alt" content="Logo Djoglo Djawi Wangon">
@@ -42,7 +47,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600;700&display=swap"
+        rel="stylesheet">
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -80,24 +87,26 @@
     </script>
     <script defer src="script.js"></script>
 </head>
+
 <body>
     <nav class="navbar" aria-label="Navigasi utama">
         <div class="logo" aria-label="Djoglo Djawi Wangon Rumah Makan">
             <span class="logo-text">Djoglo Djawi Wangon</span>
             <img src="assets/LOGO%20DDW%20WHITE.png" alt="Logo Djoglo Djawi Wangon" class="logo-image">
         </div>
-            
+
         <button class="nav-toggle" aria-label="Buka navigasi" aria-expanded="false">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </button>
         <ul class="nav-links">
-                <li><a href="#about">Tentang</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <!-- <li><a href="#gallery">Galeri</a></li> -->
-                <li><a href="#location">Lokasi</a></li>
-                <li><a href="#reservation">Reservasi</a></li>
+            <li><a href="#about">Tentang</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <!-- <li><a href="#gallery">Galeri</a></li> -->
+            <li><a href="#location">Lokasi</a></li>
+            <li><a href="#reservation">Reservasi Regular</a></li>
+            <li><a href="ramadhan.html" class="special-link">Reservasi Ramadhan</a></li>
         </ul>
     </nav>
     <header class="hero">
@@ -111,7 +120,8 @@
     <section id="about" class="about">
         <div class="container">
             <h2>Tentang Kami</h2>
-            <p>Djoglo Djawi Wangon menghadirkan suasana hangat khas Jawa, pemandangan asri tepi sawah, dan area makan yang cocok untuk berbagai kebutuhan, dengan menu yang memanjakan lidah Anda.</p>
+            <p>Djoglo Djawi Wangon menghadirkan suasana hangat khas Jawa, pemandangan asri tepi sawah, dan area makan
+                yang cocok untuk berbagai kebutuhan, dengan menu yang memanjakan lidah Anda.</p>
         </div>
     </section>
     <section id="menu" class="menu">
@@ -162,7 +172,8 @@
         <div class="container location-grid">
             <div class="location-info">
                 <h2>Lokasi & Arah</h2>
-                <p>Temukan Djoglo Djawi Wangon di Wangon, Banyumas. Kami berada di jalur yang mudah dijangkau kendaraan pribadi maupun transportasi umum.</p>
+                <p>Temukan Djoglo Djawi Wangon di Wangon, Banyumas. Kami berada di jalur yang mudah dijangkau kendaraan
+                    pribadi maupun transportasi umum.</p>
                 <address class="location-address">
                     Jl. Raya Utara, Ledar, Banteran, Kec. Wangon, Kabupaten Banyumas, Jawa Tengah 53176
                 </address>
@@ -171,24 +182,23 @@
                         rel="noopener noreferrer">
                         Buka di Google Maps
                     </a>
-                    <a class="btn-secondary" href="https://r.grab.com/g/6-20250830_191021_c020e55546d34be193f0ce2715586b49_MEXMPS-6-C7J1PGLUAXDACN" target="_blank"
-                        rel="noopener noreferrer">
+                    <a class="btn-secondary"
+                        href="https://r.grab.com/g/6-20250830_191021_c020e55546d34be193f0ce2715586b49_MEXMPS-6-C7J1PGLUAXDACN"
+                        target="_blank" rel="noopener noreferrer">
                         Pesan via GrabFood
                     </a>
                 </div>
-                <p class="grabfood-note">Tautan GrabFood akan membuka aplikasi Grab jika sudah terpasang pada perangkat Anda.</p>
+                <p class="grabfood-note">Tautan GrabFood akan membuka aplikasi Grab jika sudah terpasang pada perangkat
+                    Anda.</p>
             </div>
             <div class="location-map">
-                <iframe
-                    title="Peta lokasi Djoglo Djawi Wangon"
-                    loading="lazy"
+                <iframe title="Peta lokasi Djoglo Djawi Wangon" loading="lazy"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3955.608978843106!2d109.0568776!3d-7.5083451!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e656510297eec4b%3A0x4c4a11a1167a4c09!2sDjoglo%20Djawi%20Wangon!5e0!3m2!1sid!2sid!4v1758443052327!5m2!1sid!2sid"
-                    allowfullscreen
-                    referrerpolicy="no-referrer-when-downgrade">
+                    allowfullscreen referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
 
-            </div>
+        </div>
         </div>
     </section>
     <section id="reservation" class="reservation">
@@ -217,16 +227,20 @@
                 <button type="submit" class="btn-primary">Reservasi via WhatsApp</button>
             </form>
             <div class="package-section">
-                <h3 style="text-align:center;color:#e0b973;margin:2.5rem 0 1.5rem 0;font-family:'Playfair Display',serif;">Pilih Jenis Paket</h3>
+                <h3
+                    style="text-align:center;color:#e0b973;margin:2.5rem 0 1.5rem 0;font-family:'Playfair Display',serif;">
+                    Pilih Jenis Paket</h3>
                 <div class="package-list">
                     <div class="package-card">
                         <div class="package-title">Wedding</div>
-                        <div class="package-desc">Rayakan hari bahagia Anda bersama orang-orang tercinta dengan paket pernikahan lengkap yang kami siapkan khusus untuk Anda.</div>
+                        <div class="package-desc">Rayakan hari bahagia Anda bersama orang-orang tercinta dengan paket
+                            pernikahan lengkap yang kami siapkan khusus untuk Anda.</div>
                         <button class="wa-action btn-primary">Tanya Paket Wedding</button>
                     </div>
                     <div class="package-card">
                         <div class="package-title">Tunangan</div>
-                        <div class="package-desc">Rayakan momen tunangan Anda bersama keluarga dan sahabat terdekat dengan paket lengkap yang kami siapkan khusus untuk Anda.</div>
+                        <div class="package-desc">Rayakan momen tunangan Anda bersama keluarga dan sahabat terdekat
+                            dengan paket lengkap yang kami siapkan khusus untuk Anda.</div>
                         <button class="wa-action btn-primary">Tanya Paket Tunangan</button>
                     </div>
                     <!--<div class="package-card">
@@ -242,14 +256,17 @@
         <div class="container footer-content">
             <div class="footer-social">
                 <h4>Social Media Kami</h4>
-                <p class="footer-social-subtitle">Ikuti kami untuk melihat promo terupdate,dan momen spesial terbaru.</p>
+                <p class="footer-social-subtitle">Ikuti kami untuk melihat promo terupdate,dan momen spesial terbaru.
+                </p>
                 <ul class="footer-social-list">
                     <li>
                         <a href="https://www.instagram.com/ddwrumahmakan" target="_blank" rel="noopener noreferrer">
                             <span class="social-icon" aria-hidden="true">
                                 <svg viewBox="0 0 24 24" role="img" focusable="false">
-                                    <rect x="3" y="3" width="18" height="18" rx="5" ry="5" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round" />
-                                    <circle cx="12" cy="12" r="3.7" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round" />
+                                    <rect x="3" y="3" width="18" height="18" rx="5" ry="5" fill="none"
+                                        stroke="currentColor" stroke-width="1.6" stroke-linejoin="round" />
+                                    <circle cx="12" cy="12" r="3.7" fill="none" stroke="currentColor" stroke-width="1.6"
+                                        stroke-linejoin="round" />
                                     <circle cx="17.25" cy="6.75" r="1.2" fill="currentColor" />
                                 </svg>
                             </span>
@@ -257,10 +274,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.tiktok.com/@ddwrumahmakan?_t=ZS-8zwBWVCofZP&_r=1" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.tiktok.com/@ddwrumahmakan?_t=ZS-8zwBWVCofZP&_r=1" target="_blank"
+                            rel="noopener noreferrer">
                             <span class="social-icon" aria-hidden="true">
                                 <svg viewBox="0 0 24 24" role="img" focusable="false">
-                                    <path xmlns="http://www.w3.org/2000/svg" d="M16.8217 5.1344C16.0886 4.29394 15.6479 3.19805 15.6479 2H14.7293M16.8217 5.1344C17.4898 5.90063 18.3944 6.45788 19.4245 6.67608C19.7446 6.74574 20.0786 6.78293 20.4266 6.78293V10.2191C18.645 10.2191 16.9932 9.64801 15.6477 8.68211V15.6707C15.6477 19.1627 12.8082 22 9.32386 22C7.50043 22 5.85334 21.2198 4.69806 19.98C3.64486 18.847 2.99994 17.3331 2.99994 15.6707C2.99994 12.2298 5.75592 9.42509 9.17073 9.35079M16.8217 5.1344C16.8039 5.12276 16.7861 5.11101 16.7684 5.09914M6.9855 17.3517C6.64217 16.8781 6.43802 16.2977 6.43802 15.6661C6.43802 14.0734 7.73249 12.7778 9.32394 12.7778C9.62087 12.7778 9.9085 12.8288 10.1776 12.9124V9.40192C9.89921 9.36473 9.61622 9.34149 9.32394 9.34149C9.27287 9.34149 8.86177 9.36884 8.81073 9.36884M14.7244 2H12.2097L12.2051 15.7775C12.1494 17.3192 10.8781 18.5591 9.32386 18.5591C8.35878 18.5591 7.50971 18.0808 6.98079 17.3564" stroke="#e0b973" stroke-linejoin="round"/>
+                                    <path xmlns="http://www.w3.org/2000/svg"
+                                        d="M16.8217 5.1344C16.0886 4.29394 15.6479 3.19805 15.6479 2H14.7293M16.8217 5.1344C17.4898 5.90063 18.3944 6.45788 19.4245 6.67608C19.7446 6.74574 20.0786 6.78293 20.4266 6.78293V10.2191C18.645 10.2191 16.9932 9.64801 15.6477 8.68211V15.6707C15.6477 19.1627 12.8082 22 9.32386 22C7.50043 22 5.85334 21.2198 4.69806 19.98C3.64486 18.847 2.99994 17.3331 2.99994 15.6707C2.99994 12.2298 5.75592 9.42509 9.17073 9.35079M16.8217 5.1344C16.8039 5.12276 16.7861 5.11101 16.7684 5.09914M6.9855 17.3517C6.64217 16.8781 6.43802 16.2977 6.43802 15.6661C6.43802 14.0734 7.73249 12.7778 9.32394 12.7778C9.62087 12.7778 9.9085 12.8288 10.1776 12.9124V9.40192C9.89921 9.36473 9.61622 9.34149 9.32394 9.34149C9.27287 9.34149 8.86177 9.36884 8.81073 9.36884M14.7244 2H12.2097L12.2051 15.7775C12.1494 17.3192 10.8781 18.5591 9.32386 18.5591C8.35878 18.5591 7.50971 18.0808 6.98079 17.3564"
+                                        stroke="#e0b973" stroke-linejoin="round" />
                                 </svg>
                             </span>
                             <span class="social-label">TikTok</span>
@@ -270,7 +290,9 @@
                         <a href="https://www.facebook.com/share/1CjXdda9st/" target="_blank" rel="noopener noreferrer">
                             <span class="social-icon" aria-hidden="true">
                                 <svg viewBox="0 0 24 24" role="img" focusable="false">
-                                    <path d="M12 2.75c-5.1 0-9.25 4.15-9.25 9.25 0 4.63 3.38 8.48 7.82 9.17v-6.52H8.27v-2.7h2.3V9.87c0-2.27 1.35-3.53 3.41-3.53.99 0 2.03.18 2.03.18v2.24h-1.14c-1.12 0-1.47.69-1.47 1.39v1.67h2.51l-.4 2.7h-2.11v6.52c4.44-.69 7.82-4.54 7.82-9.17 0-5.1-4.15-9.25-9.25-9.25z" fill="currentColor" />
+                                    <path
+                                        d="M12 2.75c-5.1 0-9.25 4.15-9.25 9.25 0 4.63 3.38 8.48 7.82 9.17v-6.52H8.27v-2.7h2.3V9.87c0-2.27 1.35-3.53 3.41-3.53.99 0 2.03.18 2.03.18v2.24h-1.14c-1.12 0-1.47.69-1.47 1.39v1.67h2.51l-.4 2.7h-2.11v6.52c4.44-.69 7.82-4.54 7.82-9.17 0-5.1-4.15-9.25-9.25-9.25z"
+                                        fill="currentColor" />
                                 </svg>
                             </span>
                             <span class="social-label">Facebook</span>
@@ -283,4 +305,5 @@
         </div>
     </footer>
 </body>
+
 </html>
